# py-cdp

./: EVENTS_README.md  EVENT_REGISTRATION.md  IMPLEMENTATION_SUMMARY.md  README.md  example_event_usage.py  main.py  pyproject.toml  simple.py  watchdog.py
cdp_use/: __init__.py  client.py  event_registry.py  event_registry_library.py  helpers.py  page_event_registry.py  runtime_event_registry.py
cdp_use/cdp/: library.py  registration_library.py
cdp_use/cdp/accessibility/: commands.py  events.py  library.py  registration.py  types.py
cdp_use/cdp/animation/: commands.py  events.py  library.py  registration.py  types.py
cdp_use/cdp/audits/: commands.py  events.py  library.py  registration.py  types.py
cdp_use/cdp/autofill/: commands.py  events.py  library.py  registration.py  types.py
cdp_use/cdp/backgroundservice/: commands.py  events.py  library.py  registration.py  types.py
cdp_use/cdp/bluetoothemulation/: commands.py  events.py  library.py  registration.py  types.py
cdp_use/cdp/browser/: commands.py  events.py  library.py  registration.py  types.py
cdp_use/cdp/cachestorage/: commands.py  events.py  library.py  registration.py  types.py
cdp_use/cdp/cast/: commands.py  events.py  library.py  registration.py  types.py
cdp_use/cdp/console/: commands.py  events.py  library.py  registration.py  types.py
cdp_use/cdp/css/: commands.py  events.py  library.py  registration.py  types.py
cdp_use/cdp/debugger/: commands.py  events.py  library.py  registration.py  types.py
cdp_use/cdp/deviceaccess/: commands.py  events.py  library.py  registration.py  types.py
cdp_use/cdp/deviceorientation/: commands.py  events.py  library.py  registration.py  types.py
cdp_use/cdp/dom/: commands.py  events.py  library.py  registration.py  types.py
cdp_use/cdp/domdebugger/: commands.py  events.py  library.py  registration.py  types.py
cdp_use/cdp/domsnapshot/: commands.py  events.py  library.py  (+2 more)
cdp_use/generator/: __init__.py  __main__.py  command_generator.py  constants.py  event_generator.py  generate.py  generator.py  library_generator.py  registration_generator.py  registration_library_generator.py  registry_generator.py  type_generator.py
cdp_use/launcher/: README.md  SUMMARY.md  TYPE_SAFETY_AND_FIXES.md  __init__.py  browser.py  errors.py  example.py  flags.py  hosts.py  launcher.py  url_parser.py
examples/: basic.py
src/: client.py
src/generator/: __init__.py  command_generator.py  event_generator.py  library_generator.py  main.py  protocol_generator.py  type_generator.py
(+182 files in other folders)
