[project]
name = "cdp-use"
version = "1.3.2"
description = "Type safe generator/client library for CDP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "websockets>=15.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "build>=1.2.2.post1",
    "pre-commit>=4.2.0",
    "pyright>=1.1.403",
    "pytest>=8.4.1",
    "ruff>=0.12.2",
]

[tool.hatch.build]
include = [
    "cdp_use/**/*.py"
]
exclude = [
    "cdp_use/generator/*.py"
]
